--- a/blog/static/css/styles.css
+++ b/blog/static/css/styles.css
@@ -6,13 +6,13 @@
 .header {
     padding: 0px;
     list-style: none;
-    background-color:rgb(231, 231, 231);
+    background-color:#D5EAFF;
 
 }
 
 .footer {
     list-style: none;
-    background-color:darkgray;
+    background-color:#89CFF0;
     /*position: fixed;
     padding: 10px 10px 0px 10px;
     bottom: 0;
@@ -24,7 +24,7 @@
 }
 
 .body {
-    background-color:rgb(190, 190, 190);
+    background-color:#D5EAFF;
 }
 
 .backg {
