--- a/blog/templates/base_generic.html
+++ b/blog/templates/base_generic.html
@@ -9,13 +9,17 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <!-- Inizio datepicker -->
-  
+
   <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
 
   <!-- Fengyuan Chen's Datepicker -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" integrity="sha256-b88RdwbRJEzRx95nCuuva+hO5ExvXXnpX+78h8DjyOE=" crossorigin="anonymous" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js" integrity="sha256-/7FLTdzP6CfC1VBAj/rsp3Rinuuu9leMRGd354hvk0k=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css"
+    integrity="sha256-b88RdwbRJEzRx95nCuuva+hO5ExvXXnpX+78h8DjyOE=" crossorigin="anonymous" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js"
+    integrity="sha256-/7FLTdzP6CfC1VBAj/rsp3Rinuuu9leMRGd354hvk0k=" crossorigin="anonymous"></script>
   <!-- Fine datepicker -->
 
   <!-- Add additional CSS in static file -->
@@ -33,7 +37,8 @@
     {% block topbar %}
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
       <a class="navbar-brand" href="#">Site Navigation </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -41,19 +46,13 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Home</a>
           </li>
-
-
-
-
         </ul>
-
-
         {% if user.is_authenticated %}
-          <a style="color: beige;">User: {{ user.get_username }} &nbsp</a>
-          <!-- <a href="{% url 'logout'%}?next={{request.path}}">   Logout</a> -->
+        <a style="color: beige;">User: {{ user.get_username }} &nbsp</a>
+        <!-- <a href="{% url 'logout'%}?next={{request.path}}">   Logout</a> -->
         {% else %}
-          <!-- <a href="{% url 'login'%}">Login</a> -->
-        {% endif %} 
+        <!-- <a href="{% url 'login'%}">Login</a> -->
+        {% endif %}
       </div>
     </nav>
     {% endblock topbar%}
@@ -61,18 +60,18 @@
       <div class="col-sm-1">
 
       </div>
-        <div class="col-sm-12">
-          <p>
-            {% if messages %}
-              {% for message in messages %}
-                  <div class="text-center alert {{ message.tags }} " role="alert">
-                      {{ message|safe }}
-                  </div>
-              {% endfor %}
-            {% endif %}
-            </ul>
-          </p>
+      <div class="col-sm-12">
+        <p>
+          {% if messages %}
+          {% for message in messages %}
+        <div class="text-center alert {{ message.tags }} " role="alert">
+          {{ message|safe }}
         </div>
+        {% endfor %}
+        {% endif %}
+        </ul>
+        </p>
+      </div>
       <div class="col-sm-1">
 
       </div>
@@ -84,15 +83,15 @@
 
       <div class="col-sm-10">
         {% block content %}
-        
+
         {% endblock %}
         {% block pagination %}
         {% if is_paginated %}
         <div class="pagination">
           <span class="page-links">
             {% if page_obj.has_previous %}
-             <!-- {{ request.path }} -->
-             <!-- {{ request.GET.urlencode }} -->
+            <!-- {{ request.path }} -->
+            <!-- {{ request.GET.urlencode }} -->
             <a href="?&page=1">&laquo;first</a>
             <a href="?&page={{ page_obj.previous_page_number }}">previous</a>
             {% endif %}
@@ -117,6 +116,12 @@
       <h5>@Copyleft 2021 GPF</h5>
     </footer>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
