--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -3,9 +3,10 @@
 {% block content %}
   <h1>Lingueglietta</h1>
   <p>Welcome to Lingueglietta, a website developed by <em>GPF</em>!</p>
-  
+  Numero Visite: {{num_visits}}
+  <p></p>
   {{now}}
-
+  <p></p>
   {% load static %}
   <p></p>
 <img src="{% static 'blog/sfondo_home.jpg' %}" width="1200" alt="Home Image">
