--- a/blog/static/css/styles.css
+++ b/blog/static/css/styles.css
@@ -12,7 +12,7 @@
 
 .footer {
     list-style: none;
-    background-color:#89CFF0;
+    background-color:#d3f8db;
     /*position: fixed;
     padding: 10px 10px 0px 10px;
     bottom: 0;
@@ -24,7 +24,7 @@
 }
 
 .body {
-    background-color:#D5EAFF;
+    background-color:#f4f7d6;
 }
 
 .backg {
