--- a/blog/templates/blog/blog_about.html
+++ b/blog/templates/blog/blog_about.html
@@ -1,4 +1,7 @@
 {% extends "base_generic.html" %}
 {% block content %}
-    <h1>About Page</h1>
+    <h1>About Lingueglietta</h1>
+    <p>
+        Lingueglietta è uno splendido paesino nell'immediato entroterra ligure con una eccezionale vista sul mare
+    </p>
 {% endblock content %}
