--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,7 +1,9 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>Lingueglietta</h1>
+  <h1>Lingueglietta </h1>
+  <b>(Ving&ouml;ia)</b>
+  <p></p>
   <p>Welcome to Lingueglietta, a website developed by <em>GPF</em>!</p>
   Numero Visite: {{num_visits}}
   <p></p>
@@ -9,7 +11,7 @@
   <p></p>
   {% load static %}
   <p></p>
-<img src="{% static 'blog/sfondo_home.jpg' %}" width="1200" alt="Home Image">
+<img src="{% static 'blog/stemma_lingueglietta.JPG' %}" width="290" height="368" alt="Home Image">
 <p></p>
 
 {% endblock %}
