--- a/blog/templates/base_generic.html
+++ b/blog/templates/base_generic.html
@@ -4,6 +4,9 @@
 <head>
   {% block title %}<title>Lingueglietta</title>{% endblock %}
   <meta charset="utf-8">
+  <META name="description"
+    content="Descrizione di Lingueglietta, Come arrivare a Lingueglietta, Notizie utili su Lingueglietta">
+  <META name="keywords" content="Lingueglietta, San Pietro, Chiesa Fortezza">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -32,7 +35,7 @@
   <div class="container-fluid">
     <!-- HEADER -->
     <header class="header border border-secondary">
-      <h5>Django Training</h5>
+
     </header>
     {% block topbar %}
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
@@ -51,10 +54,23 @@
             <a class="nav-link" href="{% url 'blog-home' %}">Blog</a>
           </li>
 
+
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'poesia' %}">Poesia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'percorsi' %}">Percorsi</a>
+          </li>          
+        </ul>
+
+
+        <ul class="navbar-nav align-right">
           <li class="nav-item">
             <a class="nav-link" href="{% url 'blog-about' %}">About</a>
           </li>
         </ul>
+
+        
         {% if user.is_authenticated %}
         <a style="color: beige;">User: {{ user.get_username }} &nbsp</a>
         <!-- <a href="{% url 'logout'%}?next={{request.path}}">   Logout</a> -->
@@ -68,7 +84,7 @@
       <div class="col-sm-1">
 
       </div>
-      <div class="col-sm-12">
+      <div class="col-sm-10">
         <p>
           {% if messages %}
           {% for message in messages %}
@@ -120,8 +136,10 @@
       </div>
     </div>
     <!-- FOOTER -->
-    <footer class="footer border border-secondary">
-      <h5>@Copyleft 2021 GPF</h5>
+    <footer class="footer border border-secondary bg-dark">
+      <h5>
+        <font color="#FFFFFF">@Copyleft 2021 GPF</font>
+      </h5>
     </footer>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
