Finished old site

--- a/blog/templates/percorsi.html
+++ b/blog/templates/percorsi.html
@@ -4,7 +4,7 @@
 {% block content %}
 <p>Fotografia di Lingueglietta da Satellite</p>
 <p></p>
-<img src="{% static 'blog/percorsi_a_piedi.gif' %}" width="800" alt="Home Image" ismap usemap="#Satellite">
+<img src="{% static 'blog/percorsi_a_piedi.gif' %}" width="800" alt="Home Image" usemap="#Satellite">
 <p></p>
 
 
