--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -11,7 +11,7 @@
   <p></p>
   {% load static %}
   <p></p>
-<img src="{% static 'blog/stemma_lingueglietta.JPG' %}" width="290" height="368" alt="Home Image">
+<img src="{% static 'blog/stemma_lingueglietta.jpg' %}" width="290" height="368" alt="Home Image">
 <p></p>
 
 {% endblock %}
