--- a/blog/templates/base_generic.html
+++ b/blog/templates/base_generic.html
@@ -8,24 +8,19 @@
     content="Descrizione di Lingueglietta, Come arrivare a Lingueglietta, Notizie utili su Lingueglietta">
   <META name="keywords" content="Lingueglietta, San Pietro, Chiesa Fortezza">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+ 
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <!-- Inizio datepicker -->
-
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-
-  <!-- Fengyuan Chen's Datepicker -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css"
-    integrity="sha256-b88RdwbRJEzRx95nCuuva+hO5ExvXXnpX+78h8DjyOE=" crossorigin="anonymous" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js"
-    integrity="sha256-/7FLTdzP6CfC1VBAj/rsp3Rinuuu9leMRGd354hvk0k=" crossorigin="anonymous"></script>
-  <!-- Fine datepicker -->
-
-  <!-- Add additional CSS in static file -->
+  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  
+  
+    <!-- Add additional CSS in static file -->
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
@@ -44,39 +39,25 @@
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
+      <div class="navbar-collapse collapse " id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'index' %}">Home</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'blog-home' %}">Blog</a>
-          </li>
-
-
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'poesia' %}">Poesia</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'percorsi' %}">Percorsi</a>
-          </li>          
+          <li><a class="nav-link nav-item" href="{% url 'index' %}">Home</a></li>
+          
+          <li><a class="nav-link nav-item" href="{% url 'poesia' %}">Poesia</a></li>
+          <li><a class="nav-link nav-item" href="{% url 'percorsi' %}">Percorsi</a></li>
         </ul>
-
-
-        <ul class="navbar-nav align-right">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'blog-about' %}">About</a>
+        <ul class="navbar-right navbar-nav ">
+          <li><a class="nav-link nav-item" href="{% url 'blog-home' %}">Blog</a></li>
+          <li><a class="nav-link nav-item" href="{% url 'blog-about' %}">About</a></li>
+          <li>
+            {% if user.is_authenticated %}
+            <a class="nav-link nav-item" style="color: beige;">User: {{ user.get_username }} &nbsp</a>
+            <!-- <a href="{% url 'logout'%}?next={{request.path}}">   Logout</a> -->
+            {% else %}
+            <!-- <a href="{% url 'login'%}">Login</a> -->
+            {% endif %}
           </li>
         </ul>
-
-        
-        {% if user.is_authenticated %}
-        <a style="color: beige;">User: {{ user.get_username }} &nbsp</a>
-        <!-- <a href="{% url 'logout'%}?next={{request.path}}">   Logout</a> -->
-        {% else %}
-        <!-- <a href="{% url 'login'%}">Login</a> -->
-        {% endif %}
       </div>
     </nav>
     {% endblock topbar%}
@@ -142,12 +123,7 @@
       </h5>
     </footer>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
-    integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
-    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
