--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,15 +1,19 @@
 
 {% extends "base_generic.html" %}
 {% block content %}
-    {% for post in posts %}
+{% if user.is_authenticated %}
+<a class = "btn btn-primary btn-sm" href="{% url 'post-create' %}">Crea un Post</a>
+<hr>
+{% endif%}
+    {% for post in post_list %}
         <article class="media content-section">
           <div class="media-body">
             <div class="article-metadata">
               <a class="mr-2" href="#">{{ post.author }}</a>
               <small class="text-muted">{{ post.date_posted|date:"d F Y" }}</small>
             </div>
-            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
+            <h2><a class="article-title" href="{% url 'post-detail' post.pk %}">{{ post.title }}</a></h2>
+            <p class="article-content">{{ post.content|truncatewords:10}}</p>
           </div>
         </article>
     {% endfor %}
