--- a/blog/templates/base_generic.html
+++ b/blog/templates/base_generic.html
@@ -9,18 +9,18 @@
   <META name="keywords" content="Lingueglietta, San Pietro, Chiesa Fortezza">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
- 
+
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-  
-  
-    <!-- Add additional CSS in static file -->
+
+
+  <!-- Add additional CSS in static file -->
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
@@ -42,21 +42,23 @@
       <div class="navbar-collapse collapse " id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li><a class="nav-link nav-item" href="{% url 'index' %}">Home</a></li>
-          
+
           <li><a class="nav-link nav-item" href="{% url 'poesia' %}">Poesia</a></li>
           <li><a class="nav-link nav-item" href="{% url 'percorsi' %}">Percorsi</a></li>
         </ul>
         <ul class="navbar-right navbar-nav ">
-          <li><a class="nav-link nav-item" href="{% url 'blog-home' %}">Blog</a></li>
-          <li><a class="nav-link nav-item" href="{% url 'blog-about' %}">About</a></li>
-          <li>
+          <li><a class="nav-link nav-item" href="{% url 'post-list' %}">Blog</a></li>
+          <li><a class="nav-link nav-item" href="{% url 'about' %}">About</a></li>
+
             {% if user.is_authenticated %}
-            <a class="nav-link nav-item" style="color: beige;">User: {{ user.get_username }} &nbsp</a>
-            <!-- <a href="{% url 'logout'%}?next={{request.path}}">   Logout</a> -->
+              <li><a class="nav-link nav-item" style="color: beige;">User: {{ user.get_username }} &nbsp</a></li>
+              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'logout'%}?next={{request.path}}"> Logout</a></li>
+              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'change_password'%}"> Change Password</a></li>
+              
             {% else %}
-            <!-- <a href="{% url 'login'%}">Login</a> -->
+              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'login'%}">Login</a></li>
             {% endif %}
-          </li>
+
         </ul>
       </div>
     </nav>
@@ -68,13 +70,12 @@
       <div class="col-sm-10">
         <p>
           {% if messages %}
-          {% for message in messages %}
-        <div class="text-center alert {{ message.tags }} " role="alert">
-          {{ message|safe }}
-        </div>
-        {% endfor %}
-        {% endif %}
-        </ul>
+            {% for message in messages %}
+              <div class="text-center alert {{ message.tags }} " role="alert">
+                {{ message|safe }}
+              </div>
+            {% endfor %}
+          {% endif %}
         </p>
       </div>
       <div class="col-sm-1">
