--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,12 +1,25 @@
 {% extends "base_generic.html" %}
-{% load crispy_forms_tags %}
+
+
 {% block content %}
-<p>{{post.author}}  &NonBreakingSpace; &NonBreakingSpace;{{ post.date_posted|date:"d F Y" }}</p>
-<h2><p class="article-title">{{post.title}} </p></h2>
-<p>{{post.content }}</p>
+  <article class="media content-section">
+    <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
+    <div class="media-body">
+      <div class="article-metadata">
+        <a class="mr-2" href="#">{{ object.author }}</a>
+        <small class="text-muted">{{ object.date_posted|date:"d F Y" }}</small>
+        {% if object.author == user %}
+          <div>
+            <a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'post-update' object.id %}">Update</a>
+            <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' object.id %}">Delete</a>
+          </div>
+        {% endif %}
+        
+      </div>
+      <h2 class="article-title">{{ object.title }}</h2>
+      <p class="article-content">{{ object.content }}</p>
+      <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-dark btn-sm mt-1 mb-1" class>Back</a>
+    </div>
 
-
-    
-<a href="{{ request.META.HTTP_REFERER }}" class="btn btn-dark btn-sm" class>Back</a>
-  
-{% endblock %}
+  </article>
+{% endblock content %}
