--- a/blog/templates/base_generic.html
+++ b/blog/templates/base_generic.html
@@ -57,6 +57,7 @@
               
             {% else %}
               <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'login'%}">Login</a></li>
+              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'signup'%}">Sign Up</a></li>
             {% endif %}
 
         </ul>
