--- a/blog/templates/base_generic.html
+++ b/blog/templates/base_generic.html
@@ -52,11 +52,11 @@
 
             {% if user.is_authenticated %}
               <li><a class="nav-link nav-item" style="color: beige;">User: {{ user.get_username }} &nbsp</a></li>
-              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'logout'%}?next={{request.path}}"> Logout</a></li>
+              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'logout'%}?next=/"> Logout</a></li>
               <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'change_password'%}"> Change Password</a></li>
               
             {% else %}
-              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'login'%}">Login</a></li>
+              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'login'%}?next={{request.path}}">Login</a></li>
               <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'signup'%}">Sign Up</a></li>
             {% endif %}
 
