--- a/blog/templates/base_generic.html
+++ b/blog/templates/base_generic.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
   {% block title %}<title>Lingueglietta</title>{% endblock %}
@@ -52,12 +52,12 @@
 
             {% if user.is_authenticated %}
               <li><a class="nav-link nav-item" style="color: beige;">User: {{ user.get_username }} &nbsp</a></li>
-              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'logout'%}?next=/"> Logout</a></li>
-              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'change_password'%}"> Change Password</a></li>
+              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'logout'%}?next=/"> Esci</a></li>
+              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'password_change'%}"> Cambia Password</a></li>
               
             {% else %}
-              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'login'%}?next={{request.path}}">Login</a></li>
-              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'signup'%}">Sign Up</a></li>
+              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'login'%}?next={{request.path}}">Accedi</a></li>
+              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'signup'%}">Registrati</a></li>
             {% endif %}
 
         </ul>
