--- a/blog/templates/base_generic.html
+++ b/blog/templates/base_generic.html
@@ -47,10 +47,28 @@
           <li><a class="nav-link nav-item" href="{% url 'percorsi' %}">Percorsi</a></li>
         </ul>
         <ul class="navbar-right navbar-nav ">
-          <li><a class="nav-link nav-item" href="{% url 'post-list' %}">Blog</a></li>
+          
           <li><a class="nav-link nav-item" href="{% url 'about' %}">About</a></li>
+                    <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Azioni
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              {% if user.is_authenticated %}
+              <a class="dropdown-item" style="color: rgb(0, 132, 255);" href="{% url 'logout'%}?next=/"> Esci</a>
+              <a class="dropdown-item" style="color: rgb(0, 132, 255);" href="{% url 'password_change'%}"> Cambia Password</a>
+              
+            {% else %}
+              <a class="dropdown-item" style="color: rgb(0, 132, 255);" href="{% url 'login'%}?next={{request.path}}">Accedi</a>
+              <a class="dropdown-item" style="color: rgb(0, 132, 255);" href="{% url 'signup'%}">Registrati</a>
+            {% endif %}
+            </div>
+          </li>
+              {% if user.is_authenticated %}
+              <li><a class="nav-link nav-item" style="color: beige;">User: {{ user.get_username }} &nbsp</a></li>
+              {% endif %}
 
-            {% if user.is_authenticated %}
+            {% comment %} {% if user.is_authenticated %}
               <li><a class="nav-link nav-item" style="color: beige;">User: {{ user.get_username }} &nbsp</a></li>
               <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'logout'%}?next=/"> Esci</a></li>
               <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'password_change'%}"> Cambia Password</a></li>
@@ -58,7 +76,7 @@
             {% else %}
               <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'login'%}?next={{request.path}}">Accedi</a></li>
               <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'signup'%}">Registrati</a></li>
-            {% endif %}
+            {% endif %} {% endcomment %}
 
         </ul>
       </div>
@@ -85,10 +103,25 @@
     </div>
     <div class="row">
       <div class="col-sm-1">
+    {% block sidebar %}
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
 
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsideCollapse"
+        aria-controls="navbarsideCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse " id="navbarsideCollapse">
+        <nav class="sidebar-sticky">
+          <ul class="navbar-left navbar-nav flex-column">
+            <li><a class="nav-link nav-item" href="{% url 'post-list' %}">Blog</a></li>
+          </ul>
+        </nav>
+      </div>
+    </nav>
+    {% endblock sidebar%}
       </div>
 
-      <div class="col-sm-10">
+      <div class="col-sm-9">
         {% block content %}
 
         {% endblock %}
