--- a/blog/static/css/styles.css
+++ b/blog/static/css/styles.css
@@ -1,82 +1,89 @@
 .sidebar-nav {
-    margin-top: 20px;
-    padding: 10px;
-    list-style: none;
+  margin-top: 20px;
+  padding: 10px;
+  list-style: none;
 }
+
 .header {
-    padding: 0px;
-    list-style: none;
-    /* background-color:#d3f8db; */
+  padding: 0px;
+  list-style: none;
+  /* background-color:#d3f8db; */
 
 }
 
 .footer {
-    list-style: none;
-    /* background-color:#d3f8db; */
-    /*position: fixed;
+  list-style: none;
+  /* background-color:#d3f8db; */
+  /*position: fixed;
     padding: 10px 10px 0px 10px;
     bottom: 0;
     width: 100%;*/
-    /* Height of the footer*/ 
-    height: 40px;
+  /* Height of the footer*/
+  height: 40px;
 
-    
+
 }
 
 .body {
-    /* background-color:#f4f7d6; */
-    background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5) );
-    /* background-image: url(background_water.gif); */
+  /* background-color:#f4f7d6; */
+  /* background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5) ); */
+  background-color: rgb(190, 190, 190);
+  /* background-image: url(background_water.gif); */
 }
 
 .backg {
-    background-color:darkolivegreen;
+  background-color: darkolivegreen;
 }
-h1 { 
-    text-decoration: underline;
+
+h1 {
+  text-decoration: underline;
 }
 
 #t01 {
-    border: 3px blue;
-  }
+  border: 3px blue;
+}
 
-table, th, tr, td {
-    border: 1px solid rgb(0, 0, 0);
-    padding: 5px;
-  }
+table,
+th,
+tr,
+td {
+  border: 1px solid rgb(0, 0, 0);
+  padding: 5px;
+}
 
 .calendar {
-    width: 98%;
-    margin: auto;
-    font-size: 15px;
-  }
-  
-.calendar tr, .calendar td , .calendar th {
-    border: 1px solid rgb(0, 0, 0);
-  }
-  
+  width: 98%;
+  margin: auto;
+  font-size: 15px;
+}
+
+.calendar tr,
+.calendar td,
 .calendar th {
-    padding: 5px;
-    text-align: center;
-    font-size: 18px;
-  }
-  
+  border: 1px solid rgb(0, 0, 0);
+}
+
+.calendar th {
+  padding: 5px;
+  text-align: center;
+  font-size: 18px;
+}
+
 .calendar td {
-    width: 200px;
-    height: 100px;
-    padding: 20px 0px 0px 5px;
-  }
-  
+  width: 200px;
+  height: 100px;
+  padding: 20px 0px 0px 5px;
+}
+
 .month {
-    font-size: 25px;
-  }
-  
+  font-size: 25px;
+}
+
 .date {
-    font-size: 16px;
-  }
-  
+  font-size: 16px;
+}
+
 .calendar ul {
-    height: 100%;
-    padding: 0px 5px 0px 20px;
-  }
-  
+  height: 100%;
+  padding: 0px 5px 0px 20px;
+}
