--- a/blog/templates/base_generic.html
+++ b/blog/templates/base_generic.html
@@ -30,7 +30,8 @@
   <div class="container-fluid">
     <!-- HEADER -->
     <header class="header border border-secondary">
-
+    <img style=' width: 100%; object-fit: contain'/ src="{% static 'blog/Header1.jpg' %}" height = auto alt="Header Image">
+      {% comment %} <h5>GPF</h5> {% endcomment %}
     </header>
     {% block topbar %}
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
