--- a/blog/templates/percorsi.html
+++ b/blog/templates/percorsi.html
@@ -11,6 +11,7 @@
 <map name="Satellite">
 	<area href= "{% static 'blog/cappelletta.jpg' %}" shape="circle" coords="100, 250, 15" alt="Cappelletta">
 	<area href= "{% static 'blog/san_rocco.jpg' %}" shape="circle" coords="236, 207, 15" alt="Campana di San Rocco">
+	<area href= "{% static 'blog/san_pietro.jpg' %}" shape="circle" coords="700, 100, 15" alt="San Pietro">
 </map>
 <p>Cliccare nei punti numerati della foto per vedere una immagine di dettaglio</p>
 
