--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,8 +1,9 @@
 
 {% extends "base_generic.html" %}
 {% block content %}
-
+  {% if user.is_authenticated %}
 <a class = "btn btn-primary btn-sm" href="{% url 'post-create' %}">Crea un Post</a>
+  {% endif %}
 <hr>
 
     {% for post in post_list %}
