--- a/blog/templates/percorsi.html
+++ b/blog/templates/percorsi.html
@@ -2,14 +2,14 @@
 {% load static %}
 
 {% block content %}
-<p>Fotografia di Lingueglietta da Satellite</p>
+<h3>Fotografia di Lingueglietta da Satellite</h3>
 <p></p>
 <img src="{% static 'blog/percorsi_a_piedi.jpg' %}" width="800" alt="Home Image" usemap="#Satellite">
 <p></p>
 
 
 <map name="Satellite">
-	<area href= "{% static 'blog/cappelletta.jpg' %}" shape="circle" coords="100, 250, 15" alt="Cappelletta">
+	<area href="{% url 'cappelletta' %}" shape="circle" coords="100, 250, 15" alt="Cappelletta">
 	<area href= "{% static 'blog/san_rocco.jpg' %}" shape="circle" coords="270, 200, 15" alt="Campana di San Rocco">
 	<area href= "{% static 'blog/san_pietro.jpg' %}" shape="circle" coords="700, 100, 15" alt="San Pietro">
 </map>
