--- a/info/templates/info/cappelletta.html
+++ b/info/templates/info/cappelletta.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h3>Cappelletta</h3>
 <p></p>
-<img src="{% static 'blog/cappelletta.jpg' %}" width="400">
+<img src="{% static 'info/cappelletta.jpg' %}" width="400">
 <p></p>
 
 
