--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -4,12 +4,12 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Delete Post</legend>
-                <h2>Are you sure you want to delete the post "{{ object.title }}"?</h2>
+                <legend class="border-bottom mb-4">Cancella Post</legend>
+                <h2>Sei sicuro di voler cancellare il post "{{ object.title }}"?</h2>
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-danger btn-sm mt-1 mb-1" type="submit">Yes, Delete</button>
-                <a class="btn btn-dark btn-sm" href="{% url 'post-detail' object.id %}">Back</a>
+                <button class="btn btn-danger btn-sm mt-1 mb-1" type="submit">Si, Cancella</button>
+                <a class="btn btn-dark btn-sm" href="{% url 'blog:post-detail' object.id %}">Back</a>
             </div>
         </form>
     </div>
