--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,7 +2,7 @@
 {% extends "base_generic.html" %}
 {% block content %}
   {% if user.is_authenticated %}
-<a class = "btn btn-primary btn-sm" href="{% url 'post-create' %}">Crea un Post</a>
+<a class = "btn btn-primary btn-sm" href="{% url 'blog:post-create' %}">Crea un Post</a>
   {% endif %}
 <hr>
 
@@ -14,7 +14,7 @@
               <small class="text-muted"><strong> Date Posted: </strong>{{ post.date_posted|date:"d F Y" }}</small>
               <small class="text-muted"><strong> Date Modifed: </strong>{{ post.date_modified|date:"d F Y" }}</small>
             </div>
-            <h2><a class="article-title" href="{% url 'post-detail' post.pk %}">{{ post.title }}</a></h2>
+            <h2><a class="article-title" href="{% url 'blog:post-detail' post.pk %}">{{ post.title }}</a></h2>
             <div class= "border border-primary rounded ">
               <p class="article-content">{{ post.content|truncatewords:10}}</p>
             </div>
