--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -35,19 +35,19 @@
     </header>
     {% block topbar %}
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-      <a class="navbar-brand" href="{% url 'index' %}">Home</a>
+      <a class="navbar-brand" href="{% url 'index' %}">Home</a> 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="navbar-collapse collapse " id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
-          <li><a class="nav-link nav-item" href="{% url 'poesia' %}">Poesia</a></li>
-          <li><a class="nav-link nav-item" href="{% url 'percorsi' %}">Percorsi</a></li>
+          <li><a class="nav-link nav-item" href="{% url 'info:poesia' %}">Poesia</a></li>
+          <li><a class="nav-link nav-item" href="{% url 'info:percorsi' %}">Percorsi</a></li>
         </ul>
         <ul class="navbar-right navbar-nav ">
           
-          <li><a class="nav-link nav-item" href="{% url 'about' %}">About</a></li>
+          <li><a class="nav-link nav-item" href="{% url 'info:about' %}">About</a></li>
                     <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Azioni
@@ -59,7 +59,7 @@
               
             {% else %}
               <a class="dropdown-item" style="color: rgb(0, 132, 255);" href="{% url 'login'%}?next={{request.path}}">Accedi</a>
-              <a class="dropdown-item" style="color: rgb(0, 132, 255);" href="{% url 'signup'%}">Registrati</a>
+              <a class="dropdown-item" style="color: rgb(0, 132, 255);" href="{% url 'users:signup'%}">Registrati</a>
             {% endif %}
             </div>
           </li>
@@ -74,7 +74,7 @@
               
             {% else %}
               <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'login'%}?next={{request.path}}">Accedi</a></li>
-              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'signup'%}">Registrati</a></li>
+              <li><a class="nav-link nav-item" style="color: rgb(0, 132, 255);" href="{% url 'users:signup'%}">Registrati</a></li>
             {% endif %} {% endcomment %}
 
         </ul>
@@ -112,7 +112,7 @@
       <div class="navbar-collapse collapse " id="navbarsideCollapse">
         <nav class="sidebar-sticky">
           <ul class="navbar-left navbar-nav flex-column">
-            <li><a class="nav-link nav-item" href="{% url 'post-list' %}">Blog</a></li>
+            <li><a class="nav-link nav-item" href="{% url 'blog:post-list' %}">Blog</a></li>
           </ul>
         </nav>
       </div>
