--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,25 +1,46 @@
-
 {% extends "base_generic.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
-  {% if user.is_authenticated %}
-<a class = "btn btn-primary btn-sm" href="{% url 'blog:post-create' %}">Crea un Post</a>
-  {% endif %}
-<hr>
+<form>
 
+<div class="row">
+      <div class="col-sm-1">
+        <input type="submit" class="btn btn-primary btn-sm" value="Cerca">
+      </div>
+      <div class="col-sm-6">
+        {%for item in form%}
+          {{item|as_crispy_field}}
+        {%endfor%}
+      </div>
+</div>
+</form>
+<h1>Post List</h1>
+  {% if user.is_authenticated %}
+    <a class = "btn btn-success btn-sm" href="{% url  'blog:post-create' %}">Create Post</a>
+  {% endif %}
+
+
+  {% if post_list %}
     {% for post in post_list %}
+    <hr>
         <article class="media content-section">
           <div class="media-body">
             <div class="article-metadata">
               <a class="mr-2" href="#">{{ post.author }}</a>
-              <small class="text-muted"><strong> Date Posted: </strong>{{ post.date_posted|date:"d F Y" }}</small>
-              <small class="text-muted"><strong> Date Modifed: </strong>{{ post.date_modified|date:"d F Y" }}</small>
+              <small class="text-muted"><strong> Date Posted: </strong>{{ post.date_posted|date:"d F Y - G:i" }}</small>
+              <small class="text-muted"><strong> Date Modifed: </strong>{{ post.date_modified|date:"d F Y - G:i" }}</small>
             </div>
             <h2><a class="article-title" href="{% url 'blog:post-detail' post.pk %}">{{ post.title }}</a></h2>
-            <div class= "border border-primary rounded ">
+            <div class= "border border-primary rounded bg-light">
               <p class="article-content">{{ post.content|truncatewords:10}}</p>
             </div>
             <p></p>
           </div>
         </article>
     {% endfor %}
-{% endblock content %}
+
+  {% else %}
+    <p>There are no posts.</p>
+  {% endif %} 
+
+{% endblock %}
