--- a/info/templates/info/about.html
+++ b/info/templates/info/about.html
@@ -1,8 +1,10 @@
 {% extends "base_generic.html" %}
 {% block content %}
-    <h1>About Lingueglietta</h1>
+    <h3>Lingueglietta</h3>
     <p>
-        Lingueglietta è uno splendido paesino nell'immediato entroterra ligure con una eccezionale vista sul mare
+        Lingueglietta è uno splendido paesino nell'immediato entroterra ligure con una eccezionale 
+        vista sul mare. E' una frazione del comune di <a href="http://www.comune.cipressa.im.it/" target="_blank">Cipressa</a> e si trova
+        nell'entroterra del comune di <a href="http://www.comune.sanlorenzoalmare.im.it/" target="_blank">San Lorenzo Al Mare</a>
     </p>
 
 {% endblock content %}
