--- a/info/templates/info/san_rocco.html
+++ b/info/templates/info/san_rocco.html
@@ -2,10 +2,26 @@
 {% load static %}
 
 {% block content %}
-<h3>Campana di San Rocco</h3>
+<h3>Chiesa di San Rocco</h3>
 <p></p>
 <img src="{% static 'info/san_rocco.jpg' %}" width="400">
 <p></p>
+<p class="description">
+    La chiesa di San Rocco si trova nella borgata "Banchetta" e viene aperta
+    una volta l'anno nell'occasione dei festeggiamenti del Santo il <em> 16 Agosto</em>.
+    Molto caratteristici erano i festeggiamenti del Santo in quanto, dopo la processione, veniva allestito,
+    lungo la strada, un sontuoso banchetto offerto dalla popolazione (residente e non) a tutti i partecipanti
+    ed i festeggiamenti proseguivano fino a notte fonda. Questi festeggiamenti erano anche un'ottima occasione
+    per rafforzare i legami della popolazione residente con i molti turisti che amano trascorrere 
+    il periodo estivo nella nostra bella <a href="https://www.regione.liguria.it/" target="_blank">Liguria</a> e
+    anche per permettere alle aitanti massaie del paesello di esibirsi nella preparazione dei loro
+    pezzi forti, con la soddisfazione di non vedere avanzare neanche una briciola o un cucchiaio o una singola fetta
+    di quello che avevano tanto amorevolmente preparato.
+</p>
+<p class="description">
+    Negli ultimi festeggiamenti era presente anche un simpatico intrattenimento musicale che contribuiva
+    a rendere l'atmosfera ancora più gioiosa e che dava anche l'occasione ai convenuti di esibirsi in balli sfenati.
+</p>
 
 
 
