--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -1,16 +1,16 @@
 {% extends "base_generic.html" %}
+{% load crispy_forms_tags %}
+{% load static %}
 {% block content %}
-    <div class="content-section">
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Cancella Post</legend>
-                <h2>Sei sicuro di voler cancellare il post "{{ object.title }}"?</h2>
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-danger btn-sm mt-1 mb-1" type="submit">Si, Cancella</button>
-                <a class="btn btn-dark btn-sm" href="{% url 'blog:post-detail' object.id %}">Back</a>
-            </div>
-        </form>
+<form method="post">
+{% csrf_token %}
+    {{ form|crispy}}
+    <p>Are you sure to delete post {{ post.id }} title {{ post.title }}?</p>
+    <div class= "border border-primary rounded bg-light">
+      <p>{{ post.content }} </p> 
     </div>
-{% endblock content %}
+    <p></p>
+  <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-dark btn-sm" class>Back</a>
+  <input class = "btn btn-danger btn-sm" type="submit" value="Yes, Delete">
+</form>
+{% endblock %}
