--- a/blog/static/css/styles.css
+++ b/blog/static/css/styles.css
@@ -91,3 +91,15 @@ td {
 .description {
 text-align:justify;
 }
+#logout-form {
+  display: inline;
+}
+
+#logout-form button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  color: rgb(0, 132, 255);
+  /* text-decoration: underline; */
+}
