--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -54,8 +54,12 @@
               Azioni
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              {% if user.is_authenticated %}
-              <a class="dropdown-item" style="color: rgb(0, 132, 255);" href="{% url 'logout'%}?next=/"> Esci</a>
+                {% if user.is_authenticated %}
+                <form class="dropdown-item" id="logout-form" method="post" action="{% url 'logout' %}">
+                  {% csrf_token %}  
+                  <button type="submit">Esci</button> 
+                </form>
+              <!-- <a class="dropdown-item" style="color: rgb(0, 132, 255);" href="{% url 'logout'%}?next=/"> Esci</a> -->
               <a class="dropdown-item" style="color: rgb(0, 132, 255);" href="{% url 'password_change'%}"> Cambia Password</a>
               
             {% else %}
